--- a/public/login.html
+++ b/public/login.html
@@ -24,7 +24,7 @@
       </button>
     </form>
     <p class="text-center text-sm text-gray-500 mt-6">Access is restricted to registered family members only.</p>
-   <script src="js/login.js" defer></script>
+   <script src="login.js" defer></script>
   </div>
 </body>
 </html>
