--- a/public/forum.html
+++ b/public/forum.html
@@ -41,8 +41,19 @@
 
     <section id="threads-container"></section>
   </div>
+  <h2>צור שרשור חדש</h2>
+<div id="new-thread">
+  <input type="text" id="thread-title" placeholder="כותרת השרשור" />
+  <textarea id="thread-content" placeholder="תוכן ההודעה"></textarea>
+  <button id="create-thread-btn">צור</button>
+</div>
+
+<hr>
+<h2>שרשורים אחרונים</h2>
+<div id="threads-container"></div>
+
 
   <!-- טוען את קובץ הפורום מהצד לקוח -->
-  <script src="/forum.js"></script>
+  <script src="/js/forum.js"></script>
 </body>
 </html>
