--- a/public/forum.html
+++ b/public/forum.html
@@ -94,6 +94,22 @@
     padding: 15px;
     border-radius: 8px;
   }
+    .dark-mode {
+  background-color: #121212;
+  color: #e0e0e0;
+}
+.dark-mode .forum-container {
+  background-color: #1e1e1e;
+  border: 1px solid #333;
+}
+.dark-mode input, .dark-mode textarea {
+  background-color: #2a2a2a;
+  color: white;
+  border-color: #444;
+}
+.dark-mode button {
+  background-color: #333;
+}
 </style>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
